  * Add proper multi arch tags to the binary packages.
  * Fix insecure-copyright-format-uri.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Do not call qmake anymore but dh_auto_configure, thus allowing the package
    to be cross built.
  * Install openwnn's NOTICE file within qtvirtualkeyboard-plugin as required
    by the Apache 2.0 license.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 11 Mar 2018 00:08:26 -0600

qtvirtualkeyboard-opensource-src (5.9.2+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Refresh disable_test_qtbug_61279.patch.
  * Bump Qt build-dependencies to 5.9.2.
  * Use debhelper compat level 10 and dh_missing.
  * Drop unneeded pkg-kde-tools build-dependency.
  * Bump Standards-Version to 4.1.1.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 27 Oct 2017 21:47:09 +0300

qtvirtualkeyboard-opensource-src (5.9.1+dfsg-3) unstable; urgency=medium

  * Disable failing test, see https://bugreports.qt.io/browse/QTBUG-61279.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 17 Aug 2017 11:36:23 -0300

qtvirtualkeyboard-opensource-src (5.9.1+dfsg-2) unstable; urgency=medium

  * Merge release 5.7.1+dfsg-2 into the experimental branch. The repeated
    changelog entries were kept due to both packages introducing them in
    separate places.
  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 15:42:04 -0300

qtvirtualkeyboard-opensource-src (5.9.1+dfsg-1) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Add pkg-config as a build dependency, it is used to detect the system's
    hunspell.
  * Revert the internal dependencies order: it's the plugin that needs the
    QML module and not the other way around.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.9.1.
  * Do not exclude the whole src/virtualkeyboard/3rdparty/ directory from