@@ -17,6 +17,8 @@ Build-Depends: debhelper (>= 11),
                qtdeclarative5-dev (>= 5.10.1~),
                xauth,
                xvfb
+Build-Depends-Indep: qtbase5-doc-html (>= 5.10.1+dfsg~) <!nodoc>,
+                     qttools5-dev-tools (>= 5.10.1~) <!nodoc>
 Standards-Version: 4.1.3
 Section: libs
 Homepage: http://doc.qt.io/qt-5/qtvirtualkeyboard-index.html
@@ -61,3 +63,28 @@ Description: Qt virtual keyboard examples
  Desktop, and Boot2Qt targets.
  .
  This package contains examples of using the virtual keyboard.
+
+Package: qtvirtualkeyboard5-doc
+Priority: extra
+Build-Profiles: <!nodoc>
+Architecture: all
+Section: doc
+Depends: ${misc:Depends}
+Description: Qt 5 Virtual Keyboard documentation
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the documentation for the Qt 5 Virtual Keyboard plugin.
+
+Package: qtvirtualkeyboard5-doc-html
+Priority: extra
+Build-Profiles: <!nodoc>
+Architecture: all
+Section: doc
+Depends: ${misc:Depends}
+Description: Qt 5 Virtual Keyboard HTML documentation
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the HTML documentation for the Qt 5 Virtual Keyboard
+ plugin.
