@@ -1,0 +1,1 @@
+usr/share/qt5/doc/qtvirtualkeyboard/
