@@ -14,7 +14,13 @@ export QT_SELECT := qt5
 override_dh_auto_configure:
 	dh_auto_configure -- QT_BUILD_PARTS+=tests
 
-override_dh_auto_install:
+override_dh_auto_build-indep:
+	dh_auto_build -- docs
+
+override_dh_auto_install-indep:
+	dh_auto_build -- INSTALL_ROOT=$(CURDIR)/debian/tmp install_docs
+
+override_dh_auto_install-arch:
 	dh_auto_install
 
 	# We do not ship CMake files for plugins.
@@ -30,7 +36,8 @@ override_dh_auto_test-arch:
 	         QT_PLUGIN_PATH=$(CURDIR) QML2_IMPORT_PATH=$(CURDIR)/qml \
 	         HOME=$(CURDIR) LD_LIBRARY_PATH=$(CURDIR)/lib
 
-
 override_dh_clean:
 	rm -f src/virtualkeyboard/layouts.qrc
 	dh_clean
+
+override_dh_auto_test-indep:
